api routes werent working

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -17,7 +17,7 @@
       <p class="lead">Click the button to take a survey pertaining to finding a artist you would like to spend the day with; by answering a few questions!</p>
       <hr class="my-4">
       <p>The survey will calculate your results and assist with finding you a fun night out..</p>
-      <a class="btn btn-primary btn-lg" href="/FriendFinder/app/public/survey.html" role="button">Go To Survey</a>
+      <a class="btn btn-primary btn-lg" href="/survey" role="button">Go To Survey</a>
     </div>
 
 
